Pull request #922: Feature/AG-8727 Fix buttons position in the request info window and make it's content scrollable
Merge in EXTENSIONS/browser-extension from feature/AG-8727 to feature/AG-2737

Squashed commit of the following:

commit a8422ee76eecf49c00d1908fcef34b336970a304
Merge: f57339fbc 6ef7bacf6
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Thu Jun 24 12:07:48 2021 +0300

    Merge branch 'feature/AG-2737' into feature/AG-8727

commit f57339fbc79474fb508925410bc9cd37ea2b878f
Merge: 1436136b7 76f3080ae
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Thu Jun 24 11:48:56 2021 +0300

    Merge branch 'feature/AG-2737' into feature/AG-8727

commit 1436136b7c30471277c059908ddb6c4c65954546
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Wed Jun 23 19:21:04 2021 +0300

    trigger useOverflowed hook on container resize

commit 1554bb526a01c9902e938c5e047fbfe4e79381e8
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Wed Jun 23 14:28:54 2021 +0300

    add useOverflowed docs, update classnames invoking

commit 5adc8af4bd4d50d7105cb73cb46bcb4ed9cd3fac
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Wed Jun 23 14:03:31 2021 +0300

    update request modal styles, add content size tracking hook

--- a/Extension/src/pages/filtering-log/components/RequestWizard/RequestInfo/request-info.pcss
+++ b/Extension/src/pages/filtering-log/components/RequestWizard/RequestInfo/request-info.pcss
@@ -2,10 +2,6 @@
     padding: 12px 38px 12px 32px;
     word-break: break-all;
 
-    &:last-child {
-        padding-bottom: 0;
-    }
-
         @media (max-width: 640px) {
         padding: 12px 24px 12px 24px;
 
