--- a/Extension/src/pages/filtering-log/components/RequestWizard/RequestModal/RequestModal.pcss
+++ b/Extension/src/pages/filtering-log/components/RequestWizard/RequestModal/RequestModal.pcss
@@ -36,6 +36,8 @@
     }
 
     &__content {
+        flex: 1;
+        overflow-y: auto;
         background-color: var(--white);
 
         @media (prefers-color-scheme: dark) {
@@ -55,10 +57,21 @@
 
         @media (prefers-color-scheme: dark) {
             background: var(--black);
+
+            &_fixed {
+                border-bottom: 1px solid var(--gray900);
+                box-shadow: none;
+            }
         }
 
         @media (max-width: 640px) {
             padding: 24px 16px 32px;
+        }
+
+        &_fixed {
+            z-index: 1;
+            box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+            border: none;
         }
     }
 
@@ -121,6 +134,17 @@
             flex-direction: column;
             margin-top: 28px;
             padding: 0 24px;
+        }
+
+        &_fixed {
+            z-index: 1;
+            box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+            border: none;
+
+            @media (prefers-color-scheme: dark) {
+                border-top: 1px solid var(--gray900);
+                box-shadow: none;
+            }
         }
     }
 
@@ -218,6 +242,18 @@
 
         &__title {
             background: var(--white);
+
+            &_fixed {
+                box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+                border: none;
+            }
+        }
+
+        &__controls {
+            &_fixed {
+                box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+                border: none;   
+            }
         }
 
         &__header {
@@ -263,6 +299,18 @@
 
         &__title {
             background: var(--black);
+
+            &_fixed {
+                border-bottom: 1px solid var(--gray900);
+                box-shadow: none;
+            }
+        }
+
+        &__controls {
+            &_fixed {
+                border-top: 1px solid var(--gray900);
+                box-shadow: none;  
+            }
         }
 
         &__header {
